--- a/private_dot_config/mopidy/mopidy.conf
+++ b/private_dot_config/mopidy/mopidy.conf
@@ -136,7 +136,7 @@ hostname = 127.0.0.1
 port = 6600
 #password =
 #max_connections = 20
-#connection_timeout = 60
+connection_timeout = 120
 #zeroconf = Mopidy MPD server on $hostname
 #command_blacklist =
 #  listall
@@ -222,4 +222,16 @@ display_toprated = true
 # port = 8080
 # user = kodi
 # password = kodi
+
+# [radionet]
+# enabled = true
+# # Or net, de, at, fr, pt, es, dk, se, it
+# language = fr
+# min_bitrate = 96
+# favorite_stations =
+#   '1fmottos'
+#   'bbcradio1'
+#   'bbcradio2'
+#   'thetrip'
+#   'nectarine'
 
