--- a/private_dot_config/mpv/mpv.conf
+++ b/private_dot_config/mpv/mpv.conf
@@ -2,7 +2,7 @@
 user-agent="Mozilla/5.0 (X11; Linux i686) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/37.0.2062.120 Safari/537.36"
 cache=auto
 #cache-initial=1000
-cache-secs=10
+# cache-secs=10
 cookies
 rtsp-transport=lavf
 cache-pause
@@ -32,9 +32,9 @@ sub-codepage=utf8
 # Youtube DL defaults
 #ytdl-format='bestvideo[ext=mp4][height<=1080]+bestaudio[ext=m4a]/best[height<=1080]'
 #ytdl-format='bestvideo[ext=mp4][height<=720]+bestaudio[ext=m4a]/best[height<=720]'
-#ytdl-format='bestvideo[ext=mp4][height<=480]+bestaudio[ext=m4a]/best[height<=480]'
+ytdl-format='bestvideo[ext=mp4][height<=480]+bestaudio[ext=m4a]/best[height<=480]'
 #ytdl-format=bestvideo[height<=?1080][vcodec!=?vp9]+bestaudio/best
-ytdl-format=worst
+# ytdl-format=worst
 ytdl
 #no-ytdl
 
@@ -72,7 +72,7 @@ script-opts=osc-layout=bottombar
 #dscale=mitchell
 #cscale=lanczos
 
-vo=x11
+#vo=x11
 framedrop=vo
 profile=sw-fast
 sws-scaler=fast-bilinear
