--- a/private_dot_config/picom/picom.conf
+++ b/private_dot_config/picom/picom.conf
@@ -72,7 +72,7 @@ shadow-offset-x = -15;
 # The top offset for shadows. (default -15)
 shadow-offset-y = -15;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.65;
+shadow-opacity = 0.75;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -83,42 +83,48 @@ shadow-opacity = 0.65;
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM at  tab switcher.
 shadow-exclude = [
-    "! name~=''",
-   "name = 'latte-dock'",
-   "class_g = 'lattedock'",
-    "name = 'polkit-agent-helper-1'",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'GLava'",
-    "name = 'xfce4-notifyd'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "class_g = 'Conky'",
-    "class_g = 'Multiload-ng'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Firefox Beta'",
-    "class_g = 'Firefox'",
-    "class_g = 'Synapse'",
-    "name = 'budgie-panel'",
-    "class_g ?= 'Budgie-panel'",
-    "name = 'budgie-polkit-dialog'",
-    "class_g = 'Budgie-polkit-dialog'",
-    "name = 'Authentification requise'",
-    "name = 'budgie-run-dialog'",
-    "class_g ?= 'Budgie-run-dialog'",
-    "class_g = 'albert'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "_GTK_FRAME_EXTENTS@:c",
-    "bounding_shaped && !rounded_corners",
-    "argb && (_NET_WM_WINDOW_TYPE@:a *= 'MENU' || _NET_WM_WINDOW_TYPE@:a *= 'COMBO')"
+	"! name~=''",
+	"name = 'latte-dock'",
+	"class_g = 'lattedock'",
+	"name = 'polkit-agent-helper-1'",
+	"name = 'Notification'",
+	"name = 'Plank'",
+	"name = 'Docky'",
+	"name = 'Kupfer'",
+	"name = 'GLava'",
+	"name = 'xfce4-notifyd'",
+	"name *= 'VLC'",
+	"name *= 'compton'",
+	"name *= 'Chromium'",
+	"name *= 'Chrome'",
+	"class_g = 'Conky'",
+	"class_g = 'Multiload-ng'",
+	"class_g = 'Kupfer'",
+	"class_g = 'Firefox Beta'",
+	"class_g = 'Firefox'",
+	"class_g = 'qterminal'",
+	"name *= 'qterminal'",
+	"class_g = 'Konsole'",
+	"name *= 'Konsole'",
+	"class_g = 'Synapse'",
+	"name = 'budgie-panel'",
+	"class_g ?= 'Budgie-panel'",
+	"name = 'budgie-polkit-dialog'",
+	"class_g = 'Budgie-polkit-dialog'",
+	"name = 'Authentification requise'",
+	"name = 'budgie-run-dialog'",
+	"class_g ?= 'Budgie-run-dialog'",
+	"class_g = 'albert'",
+	"class_g ?= 'Notify-osd'",
+	"class_g ?= 'Cairo-dock'",
+	"class_g ?= 'Xfce4-notifyd'",
+	"class_g ?= 'Xfce4-power-manager'",
+	"_GTK_FRAME_EXTENTS@:c",
+	"bounding_shaped && !rounded_corners",
+	"argb && (_NET_WM_WINDOW_TYPE@:a *= 'MENU' || _NET_WM_WINDOW_TYPE@:a *= 'COMBO')",
+	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
+
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = true;
 
@@ -131,17 +137,23 @@ shadow-ignore-shaped = true;
 inactive-opacity = 1;
 active-opacity = 1;
 frame-opacity = 1;
-inactive-opacity-override = false;
+inactive-opacity-override = true;
 
 #opacity-rule = [
-	#"85:class_g = 'Dolphin'",
-	#"85:class_g = 'Code'",
-	#"85:class_g = 'code'",
-	#"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" #FLASHFOCUS
-#]
-opacity-rule = [
-]
+#"85:class_g = 'Dolphin'",
+#"85:class_g = 'Code'",
+#"85:class_g = 'code'",
+#"85:class_g = 'URxvt' && !_NET_WM_STATE@:32a",
+#"0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" #FLASHFOCUS
+#];
 
+opacity-rule = [
+	"0:_NET_WM_STATE@[0]:32a *= '_NET_WM_STATE_HIDDEN'",
+	"0:_NET_WM_STATE@[1]:32a *= '_NET_WM_STATE_HIDDEN'",
+	"0:_NET_WM_STATE@[2]:32a *= '_NET_WM_STATE_HIDDEN'",
+	"0:_NET_WM_STATE@[3]:32a *= '_NET_WM_STATE_HIDDEN'",
+	"0:_NET_WM_STATE@[4]:32a *= '_NET_WM_STATE_HIDDEN'"
+];
 # Dim inactive windows. (0.0 - 1.0)
 inactive-dim = 0.0;
 # Do not let dimness adjust based on window opacity.
@@ -159,10 +171,10 @@ blur-background-frame = false;
 blur-background-fixed = true;
 
 blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "(_NET_WM_WINDOW_TYPE@:a *= 'MENU' || _NET_WM_WINDOW_TYPE@:a *= 'COMBO')"
+	"window_type = 'dock'",
+	"window_type = 'desktop'",
+	"_GTK_FRAME_EXTENTS@:c",
+	"(_NET_WM_WINDOW_TYPE@:a *= 'MENU' || _NET_WM_WINDOW_TYPE@:a *= 'COMBO')"
 ];
 
 #################################
@@ -232,38 +244,38 @@ detect-client-leader = true;
 
 wintypes:
 {
-    tooltip =
-    {
-        # fade: Fade the particular type of windows.
-        fade = true;
-        # shadow: Give those windows shadow
-        shadow = false;
-        # opacity: Default opacity for the type of windows.
-        opacity = 0.85;
-        # focus: Whether to always consider windows of this type focused.
-        focus = true;
-    };
-    dock =
-    {
-        shadow = false;
-    };
-    dnd =
-    {
-        shadow = false;
-    };
-    menu =
-    {
-        # opacity: Default opacity for the type of windows.
-        opacity = 0.95;
-    };
-    dropdown_menu =
-    {
-        # opacity: Default opacity for the type of windows.
-        opacity = 0.95;
-    };
-    popup_menu =
-    {
-        # opacity: Default opacity for the type of windows.
-        opacity = 0.95;
-    };
+	tooltip =
+	{
+		# fade: Fade the particular type of windows.
+		fade = true;
+		# shadow: Give those windows shadow
+		shadow = false;
+		# opacity: Default opacity for the type of windows.
+		opacity = 0.85;
+		# focus: Whether to always consider windows of this type focused.
+		focus = true;
+	};
+	dock =
+	{
+		shadow = false;
+	};
+	dnd =
+	{
+		shadow = false;
+	};
+	menu =
+	{
+		# opacity: Default opacity for the type of windows.
+		opacity = 0.95;
+	};
+	dropdown_menu =
+	{
+		# opacity: Default opacity for the type of windows.
+		opacity = 0.95;
+	};
+	popup_menu =
+	{
+		# opacity: Default opacity for the type of windows.
+		opacity = 0.95;
+	};
 };
