--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -10,18 +10,21 @@ bind 0 select-window -t10
 set -g renumber-windows off
 set -wg mode-keys vi
 
-if "[[ ${TERM} != fbterm ]]" { set -g mouse on }
-# set -g mouse on
+if '[ -z "${pretty}" ]' {
+	setenv -g pretty false
+	if '[ "${TERM}" = "st-256color" ] || [ -n "${MLTERM}" ]' {
+		setenv -g pretty true
+	}
+}
 
-# # set the default TERM
-# set -g default-terminal screen
+if '[ "${TERM}" != "fbterm" ]' { set -g mouse on } { set -g mouse off }
+
+# set the default TERM
 set -g default-terminal screen-256color
-# determine if we should enable 256-colour support
-# if "[[ ${TERM} == xterm-256color || ${TERM} == fbterm || ${TERM} == rxvt-unicode-256color ]]" { set -g default-terminal screen-256color }
-if "[[ ${TERM} == linux ]]" { set -g default-terminal screen }
+# determine if we shouldn't enable 256-colour support
+if '[ "${TERM}" = "linux" ]' { set -g default-terminal screen }
 # update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
-
 
 # Reload an updated configuration without restarting tmux
 bind r source-file "$HOME/.tmux.conf"
@@ -41,6 +44,8 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 # bind -n S-down new-window
 bind -n C-PageDown prev
 bind -n C-PageUp next
+# bind -n C-S-Tab prev
+# bind -n C-Tab next
 bind -n C-Left swap-window -t -1
 bind -n C-Right swap-window -t +1
 
@@ -50,29 +55,119 @@ set -g status-interval 5
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @dracula-show-left-icon session
 
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-set -g @dracula-show-weather false
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-powerline false
-set -g @dracula-border-contrast true
-set -g @dracula-show-timezone false
-set -g @dracula-day-month false
+# # Dracula theme
+# set -g @dracula-show-left-icon session
+# set -g @dracula-show-battery false
+# set -g @dracula-show-network false
+# set -g @dracula-show-weather false
+# set -g @dracula-show-fahrenheit false
+# set -g @dracula-show-powerline false
+# set -g @dracula-border-contrast true
+# set -g @dracula-show-timezone false
+# set -g @dracula-day-month false
+# set -g @dracula-cpu-usage false
+# set -g @dracula-ram-usage false
+# set -g @dracula-gpu-usage false
+# if '[ "${TERM}" = "fbterm" ] || ! xset q &>/dev/null' { set -g @dracula-show-loadavg true }
+# set -g @dracula-refresh-rate 12
+# set -g @dracula-military-time true
+# set -g @dracula-show-time true
+# set -g @dracula-show-flags true
+# set -g @plugin 'dracula/tmux'
 
-set -g @dracula-cpu-usage false
-set -g @dracula-ram-usage false
-set -g @dracula-gpu-usage false
-if "[[ ${TERM} == fbterm ]] || ! xset q &>/dev/null" { set -g @dracula-show-loadavg true }
-set -g @dracula-refresh-rate 12
-set -g @dracula-military-time true
-set -g @dracula-show-time true
-set -g @dracula-show-flags true
-set -g @plugin 'dracula/tmux'
+# Nova Theme
+# set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @plugin 'o0th/tmux-nova'
 
-#set -g status-right '#(cat /proc/loadavg|cut -d" " -f1,2,3) #(date +"%a %e %b %H:%M") '
+# tmux nova
+if '[ "${pretty}" = "true" ]' { set -g @nova-nerdfonts true } { set -g @nova-nerdfonts false }
+#        
+set -g @nova-nerdfonts-left 
+set -g @nova-nerdfonts-right 
 
+set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
+set -g @nova-segment-mode-colors "#50fa7b #282a36"
+
+set -g @nova-segment-whoami "#(whoami)@#h"
+set -g @nova-segment-whoami-colors "#50fa7b #282a36"
+
+set -g @nova-segment-date '#(date +"%a %e %b %H:%M")'
+set -g @nova-segment-date-colors "#50fa7b #282a36"
+
+#    
+set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+
+# set -g @nova-segment-spotify " #(spotifycli --status)"
+# set -g @nova-segment-spotify-colors "#282a36 #f8f8f2"
+
+# set -g @cpu_percentage_format "%5.1f%%"
+# set -g @nova-segment-cpu " #(~/.tmux/plugins/tmux-cpu/scripts/cpu_percentage.sh)"
+# set -g @cpu_temp_unit "C"
+# set -g @cpu_temp_format "%3.0f"
+# set -g @nova-segment-cpu-temp "#(~/.tmux/plugins/tmux-cpu/scripts/cpu_temp.sh)"
+# set -g @nova-segment-cpu-temp-colors "#282a36 #f8f8f2"
+
+# set -g @ram_percentage_format "%5.1f%%"
+# set -g @nova-segment-ram " #(~/.tmux/plugins/tmux-cpu/scripts/ram_percentage.sh)"
+# set -g @gpu_percentage_format "%5.1f%%"
+# set -g @nova-segment-gpu "﬙ #(~/.tmux/plugins/tmux-cpu/scripts/gpu_percentage.sh)"
+# set -g @nova-segment-gpu-colors "#282a36 #f8f8f2"
+
+# set -g @gpu_temp_unit "C"
+# set -g @gpu_temp_format "%3.0f"
+# set -g @nova-segment-gpu-temp "#(~/.tmux/plugins/tmux-cpu/scripts/gpu_temp.sh)"
+# set -g @nova-segment-gpu-temp-colors "#282a36 #f8f8f2"
+#
+# set -g @gram_percentage_format "%5.1f%%"
+# set -g @nova-segment-gram "#(~/.tmux/plugins/tmux-cpu/scripts/gram_percentage.sh)"
+# set -g @nova-segment-gram-colors "#282a36 #f8f8f2"
+
+# set -g @net_speed_interfaces "enp0s18"
+# set -g @net_speed_format " %10s -  %10s"
+# set -g @nova-segment-net "#(~/.tmux/plugins/tmux-net-speed/scripts/net_speed.sh)"
+# set -g @nova-segment-net-colors "#282a36 #f8f8f2"
+
+# set -g @nova-segment-pomodoro "#(pomodoro status --format ' %%c  %%r %%d') "
+# set -g @nova-segment-pomodoro-colors "#ff5555 #f8f8f2"
+
+if '[ "${pretty}" = "true" ]' {
+	set -g @nova-segment-sound "#(~/.tmux/scripts/sound)"
+	set -g @nova-segment-sysmon "#(~/.tmux/scripts/sysmon)"
+} {
+	set -g @nova-segment-sound "#(~/.tmux/scripts/sound +i)"
+	set -g @nova-segment-sysmon "#(~/.tmux/scripts/sysmon +i)"
+}
+set -g @nova-segment-sound-colors "#282a36 #f8f8f2"
+set -g @nova-segment-sysmon-colors "#282a36 #f8f8f2"
+
+# Split modules
+# set -g @nova-segment-mpris "#(tmux-status mpris)"
+# set -g @nova-segment-mpris-colors "#282a36 #f8f8f2"
+# set -g @nova-segment-pulseaudio "#(tmux-status volume)"
+# set -g @nova-segment-pulseaudio-colors "#282a36 #f8f8f2"
+# set -g @nova-segment-cpu "#(tmux-status cpupercent)"
+# set -g @nova-segment-cpu-colors "#282a36 #f8f8f2"
+# set -g @nova-segment-loadavg "LOAD #(tmux-status loadavg)"
+# set -g @nova-segment-loadavg-colors "#282a36 #f8f8f2"
+# set -g @nova-segment-ram "#(tmux-status mempercent)"
+# set -g @nova-segment-ram-colors "#282a36 #f8f8f2"
+# set -g @nova-segment-net-downspeed "#(tmux-status downspeed)"
+# set -g @nova-segment-net-downspeed-colors "#282a36 #f8f8f2"
+# set -g @nova-segment-net-upspeed "#(tmux-status upspeed)"
+# set -g @nova-segment-net-upspeed-colors "#282a36 #f8f8f2"
+
+set -g @nova-rows 1
+set -g @nova-segments-0-left "mode"
+
+set -g @nova-segments-0-right "whoami date"
+set -g @nova-segments-1-left "sound"
+set -g @nova-segments-1-right "sysmon"
+
+#end tmux nova
+
+# set -g status-right '#[fg=bold]#[bg=red]#(~/.tmux/scripts/loadavg.sh)#[default] #(date +"%a %e %b %H:%M") '
 #set -g status-right '#[defaut]'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
