--- a/private_dot_config/polybar/config
+++ b/private_dot_config/polybar/config
@@ -41,6 +41,7 @@ format-offset =
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
 pseudo-transparency = false
+; pseudo-transparency = true
 
 ; [colors]
 ; black    = ${xrdb:color0}
@@ -108,20 +109,20 @@ module-margin-left = 0
 module-margin-right = 1
 
 font-0 = SF Compact Display:style=Light:pixelsize=9;1
-; font-0 = Input Mono Narrow:style=Thin:pixelsize=8;1
 font-1 = SF Pro Display:style=Light:pixelsize=9;1
-font-2 = Input Mono:style=Extra Light:pixelsize=8;2
 ; font-2 = SF Mono:style=Light:pixelsize=8;1
 ; font-2 = Terminus:style=Medium:pixelsize=8;1
 ; font-2 = Roboto Mono Light for Powerline:style=Light,Regular:pixelsize=8;1
-;font-2 = Digital\-7 Mono,Digital\-7:style=Mono:pixelsize=9;1
-;font-2 = Unifont:fontformat=truetype:size=8:antialias=false;0
+font-2 = Digital\-7 Mono,Digital\-7:style=Mono:pixelsize=8;2
 font-3 = SF Compact Display:style=Light:pixelsize=9;1
 ; font-3 = feather:style=Regular:pixelsize=9;1
 ;font-3 = FontAwesome:pixelsize=8;1
 font-4 = feather:style=Regular:pixelsize=9;2
 ;font-4 = Ionicons:pixelsize=8;1
 ;font-5 = Siji:pixelsize=8;1
+font-5 = monospace:style=Regular:pixelsize=8;2
+font-6 = SF Mono:style=Light:pixelsize=9;2
+font-7 = Terminus:style=Medium:pixelsize=9;2
 
 fixed-center = true
 
@@ -132,7 +133,8 @@ tray-position = none
 ; Module files: i3, xwindow, player-mpris-tail, pulseaudio, cpu, memory,
 ; 	network, date, updates
 include-file = ~/.config/polybar/colors.ini
-include-file = ~/.config/polybar/modules_colored.ini
+include-file = ~/.config/polybar/modules_common.ini
+include-file = ~/.config/polybar/modules_ui_statuses.ini
 
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
@@ -157,7 +159,7 @@ tray-background = ${colors.background}
 modules-left = i3 xwindow
 modules-center =
 ;modules-center = cpu memory downspeed upspeed
-modules-right = pulseaudio player-mpris-tail updates date time
+modules-right = pulseaudio updates date time
 
 [bar/bottom]
 inherit = bar/common
@@ -166,7 +168,33 @@ border-top-size = 1
 border-top-color = ${colors.background}
 tray-position = none
 
-modules-left = terminal browser filemanager editor mail sysmon text_browser sysupdate music tmux
+modules-left = player-mpris-tail-bottom 
+; modules-center = terminal browser filemanager editor mail sysmon text_browser sysupdate music tmux
 modules-center =
-modules-right = cpu memory downspeed upspeed
+; modules-right = cpu memory downspeed upspeed
+modules-right = ui_sysmon
+
+[bar/lxqt_bottom]
+inherit = bar/common
+bottom = true
+border-top-size = 1
+border-top-color = ${colors.background}
+tray-position = none
+
+modules-left = i3_bottom xwindow_bottom
+modules-center = player-mpris-tail-bottom
+modules-right = terminal browser filemanager editor mail sysmon text_browser sysupdate music tmux
+
+[bar/lxqt_top]
+inherit = bar/common
+bottom = false
+tray-position = none
+width = 768
+height = 20
+border-bottom-size = 1
+border-bottom-color = ${colors.background}
+
+modules-left = i3 xwindow
+modules-center =
+modules-right =
 
